--- a/renderer.ui
+++ b/renderer.ui
@@ -14,7 +14,22 @@
    <string>Renderer</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <property name="horizontalSpacing">
+    <number>0</number>
+   </property>
+   <item row="0" column="1">
     <widget class="QLabel" name="lbl_Pic">
      <property name="text">
       <string>&lt;Image&gt;</string>
@@ -24,8 +39,25 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="0">
+    <widget class="OGLWidget" name="openGLWidget">
+     <property name="minimumSize">
+      <size>
+       <width>480</width>
+       <height>0</height>
+      </size>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>OGLWidget</class>
+   <extends>QOpenGLWidget</extends>
+   <header location="global">oglwidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
